--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ section {
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .card-image {
@@ -82,4 +83,14 @@ section {
 
 p {
   margin: 0;
+}
+
+.card-badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
